conexion con el endpoint de fase 2 final